--- a/templates/index.erb
+++ b/templates/index.erb
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="/static/theme.css">
-    <link rel="stylesheet" href="/static/custom.css">
-    <title>A Programmer's Log</title>
+	<link rel="stylesheet" href="/<%= @site_root %>/static/theme.css">
+    <link rel="stylesheet" href="/<%= @site_root %>/static/custom.css">
+    <title>Sample Site</title>
     </head>
     <body>
     <header>
         <nav>
-        <ul><li><strong><a href="/">A Programmer's Log</a></strong></li></ul>
+          <ul><li><strong><a href="/<%= @site_root %>">Sample Site</a></strong></li></ul>
         </nav>
     </header>
 
@@ -21,10 +21,10 @@
 	<summary><%= category.name.capitalize %></summary>
 	<ul>
 	<% category.pages.first(5).each do |page| %>
-	    <li><a href="/<%= page.href %>"><%= page.title %></a>&nbsp<em><%= page.date %></em></dd>
+	    <li><a href="/<%= @site_root %>/<%= page.href %>"><%= page.title %></a>&nbsp<em><%= page.date %></em></dd>
         <% end %>
         <% if category.pages.length > 5 %>
-            <li><em><a href="/categories/<%= category %>">More</a></em></dd>
+          <li><em><a href="/<%= @site_root %>/categories/<%= category %>">More</a></em></dd>
         <% end %>
         </ul>
       </details>
