--- a/templates/page.erb
+++ b/templates/page.erb
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="/<%= @site_root %>/static/theme.css">
-    <link rel="stylesheet" href="/<%= @site_root %>/static/custom.css">
+        <link rel="stylesheet" href="<%= @site_root %>/static/theme.css">
+    <link rel="stylesheet" href="<%= @site_root %>/static/custom.css">
     <title><%= @title %></title>
     </head>
     <body>
     <header>
         <nav>
-          <ul><li><strong><a href="/<%= @site_root %>">Sample Site</a></strong></li></ul>
+          <ul><li><strong><a href="<%= @site_root %>">Sample Site</a></strong></li></ul>
         <ul>
             <% categories.each do |category| %>
-                <li><a href="/<%= @site_root %>/categories/<%= category %>" style="padding-bottom: 0px; padding-top: 0px"><%= category.capitalize %></a></li>
+                <li><a href="<%= @site_root %>/categories/<%= category %>" style="padding-bottom: 0px; padding-top: 0px"><%= category.capitalize %></a></li>
             <% end %>
         </ul>
         </nav>
@@ -30,7 +30,7 @@
 		<% if @tags.uniq.length > 0 %>
                     <li>Tags: </li>
                     <% @tags.each do |tag| %>
-		        <li><a href="/<%= @site_root %>/tags/<%= tag %>"><%= tag %></a></li>
+		        <li><a href="<%= @site_root %>/tags/<%= tag %>"><%= tag %></a></li>
 		    <% end %>
 		<% end %>
               </ul>
